--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -29,17 +29,13 @@ main {
   margin-top: 0
 }
 
-.main-div {
+article {
   width: 100%;
   border:  #545149 solid 2px;
   padding: 2em;
   margin-bottom: 1em;
 }
 
-/* main h4 {
-  padding-bottom: 0.5em;
-  border-bottom: #545149 solid 2px;
-} */
 
 .main-inner-div {
   padding-bottom: 0.5em;
