--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,14 +6,19 @@
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
 
+.page-header div {
+  display: flex;
+  flex-direction: column;
+}
+
 .avatar {
-  position: relative;
-  left: 25em;
+  margin:0 auto; 
 }
 
 #name {
-  position: relative;
   left: 18em;
   bottom: 1em;
   color: #FFFFFF;
+  margin:0 auto; 
+  margin-top: 1em;
 }
