--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,19 +4,19 @@
   width: 100%;
 }
 
-.title-span {
+.tweeter-span {
   font-family: "Bungee", sans-serif;
   color: #FFFFFF;
   font-size: xx-large;
 }
 
 .nav-span {
-  position: fixed;
-  top: 1.5em;
-  left: 1.5em;
+  position: relative;
+  top: 1em;
+  left: 1.0em;
 }
 
-.fixed-top {
+.nav-fixed-top {
   position: fixed;
   top: 0;
   left: 0;
@@ -29,9 +29,6 @@
   color: #FFFFFF;
   font-size: x-large;
   float: right;
-}
-
-.tweet-span {
   position: fixed;
   top: 1em;
   right: 1.5em;
