--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,9 +17,9 @@
 }
 
 
-
-nav i {
+nav button {
   border: solid  #FFFFFF;
+  background: transparent;
   border-width: 0 10px 10px 0;
   display: inline-block;
   padding: 7px;
@@ -33,6 +33,10 @@ nav i {
   -webkit-transform: rotate(45deg);
 }
 
+
+nav button:hover {
+  cursor: pointer;
+}
 
 
 .nav-fixed-top {
@@ -49,16 +53,7 @@ nav i {
   font-size: x-large;
   float: right;
   position: fixed;
-  top: 1em;
+  top: 0.8em;
   right: 1.5em;
 }
 
-
-.click-to-tweet {
-  background: transparent;
-  position: fixed;
-  top: 2em;
-  right: 3.5em;
-  padding: 1em;
-  border: transparent;
-}
