--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,24 +1,68 @@
-.page-header {
-  height: 400px;
-  width: 100%;
-  margin-top: 120px; 
-  background-color: #cc8800;
-  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+/* ●●●●●●●●●●●●●●●● TABLET OR SMALLER ●●●●●●●●●●●●●●●●●● */
+
+@media only screen and (max-width: 1024px) {
+    
+  .page-header {
+    height: 400px;
+    width: 100%;
+    margin-top: 90px; 
+    background-color: #cc8800;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  }
+  
+  .page-header div {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .avatar {
+    margin:0 auto;
+    margin-top: 1.5em;
+  }
+  
+  #name {
+    left: 18em;
+    bottom: 1em;
+    color: #FFFFFF;
+    margin:0 auto; 
+    margin-top: 1em;
+  }
+  
+  }
+
+
+/* ●●●●●●●●●●●●●●●●●●●  DESKTOP ●●●●●●●●●●●●●●●●● */
+
+@media only screen and (min-width: 1024px) {
+
+  .page-header {
+    height: 400px;
+    width: 80%;
+    margin: 50px;
+    margin-top: 150px;
+    margin-right: 50px; 
+    background-color: #cc8800;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  }
+  
+  .page-header div {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .avatar {
+    margin:0 auto;
+    margin-top: 1.5em;
+  }
+  
+  #name {
+    left: 18em;
+    bottom: 1em;
+    color: #FFFFFF;
+    margin:0 auto; 
+    margin-top: 1em;
+  }
+  
 }
 
-.page-header div {
-  display: flex;
-  flex-direction: column;
-}
 
-.avatar {
-  margin:0 auto; 
-}
-
-#name {
-  left: 18em;
-  bottom: 1em;
-  color: #FFFFFF;
-  margin:0 auto; 
-  margin-top: 1em;
-}
