--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,59 +1,137 @@
-.navbar {
-  height: 120px;
-  background-color: #4056A1;
-  width: 100%;
+/* ●●●●●●●●●●●●●●●●●●●● TABLET OR SMALLER ●●●●●●●●●●●●●●●●●●●● */
+
+
+@media only screen and (max-width: 1024px) {
+
+  .navbar {
+    height: 120px;
+    background-color: #cc8800;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+    width: 100%;
+  }
+  
+  .tweeter-span {
+    font-family: "Bungee", sans-serif;
+    color: #FFFFFF;
+    font-size: xx-large;
+  }
+  
+  .nav-span {
+    position: relative;
+    top: 1em;
+    left: 1.0em;
+  }
+  
+  
+  nav button {
+    border: solid  #FFFFFF;
+    background: transparent;
+    border-width: 0 10px 10px 0;
+    display: inline-block;
+    padding: 7px;
+    position: fixed;
+    top: 2.5em;
+    right: 4.3em;
+  }
+  
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+  
+  
+  nav button:hover {
+    cursor: pointer;
+  }
+  
+  
+  .nav-fixed-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1030;
+  }
+  
+  .new-tweet {
+    font-family: "Source Sans Pro", sans-serif;
+    color: #FFFFFF;
+    font-size: x-large;
+    float: right;
+    position: fixed;
+    top: 0.8em;
+    right: 1.5em;
+  }
+
+
 }
 
-.tweeter-span {
-  font-family: "Bungee", sans-serif;
-  color: #FFFFFF;
-  font-size: xx-large;
+/* ●●●●●●●●●●●●●●●●●●●●●●  DESKTOP ●●●●●●●●●●●●●●●●●●●●●●●●● */
+
+
+
+@media only screen and (min-width: 1024px) {
+
+  .navbar {
+    height: 120px;
+    background-color: #4056A1;
+    width: 100%;
+  }
+  
+  .tweeter-span {
+    font-family: "Bungee", sans-serif;
+    color: #FFFFFF;
+    font-size: xx-large;
+  }
+  
+  .nav-span {
+    position: relative;
+    top: 1em;
+    left: 1.0em;
+  }
+  
+  
+  nav button {
+    border: solid  #FFFFFF;
+    background: transparent;
+    border-width: 0 10px 10px 0;
+    display: inline-block;
+    padding: 7px;
+    position: fixed;
+    top: 2.5em;
+    right: 4.3em;
+  }
+  
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+  
+  
+  nav button:hover {
+    cursor: pointer;
+  }
+  
+  
+  .nav-fixed-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1030;
+  }
+  
+  .new-tweet {
+    font-family: "Source Sans Pro", sans-serif;
+    color: #FFFFFF;
+    font-size: x-large;
+    float: right;
+    position: fixed;
+    top: 0.8em;
+    right: 1.5em;
+  }
+
 }
 
-.nav-span {
-  position: relative;
-  top: 1em;
-  left: 1.0em;
-}
 
-
-nav button {
-  border: solid  #FFFFFF;
-  background: transparent;
-  border-width: 0 10px 10px 0;
-  display: inline-block;
-  padding: 7px;
-  position: fixed;
-  top: 2.5em;
-  right: 4.3em;
-}
-
-.down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-
-
-nav button:hover {
-  cursor: pointer;
-}
-
-
-.nav-fixed-top {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1030;
-}
-
-.new-tweet {
-  font-family: "Source Sans Pro", sans-serif;
-  color: #FFFFFF;
-  font-size: x-large;
-  float: right;
-  position: fixed;
-  top: 0.8em;
-  right: 1.5em;
-}
 
