arrow button now jumps via jquery bounce effects, had to require jquery UI script and stylesheet

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -48,8 +48,8 @@
     font-weight: bold;
     font-size: xx-large;
     text-align: center;
-    color: red;
-    border: solid red 4px;
+    color:#B22222;
+    border: solid #B22222 4px;
     padding: 0.5em;
     margin-top: 1em;
     margin-bottom: 1em;
@@ -245,8 +245,8 @@
     font-weight: bold;
     font-size: xx-large;
     text-align: center;
-    color: red;
-    border: solid red 4px;
+    color:#B22222;
+    border: solid #B22222 4px;
     padding: 0.5em;
     margin-top: 1em;
     margin-bottom: 1em;
