final commits before submission, cleaned up client.js to make more readable

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -4,7 +4,7 @@
  * Do not modify these two selectors, please
  */
 
-/* ●●●●●●●●●●●●●●●●●●●● TABLET OR SMALLER ●●●●●●●●●●●●●●●●●●●● */
+/* ●●●●●●●●●●●●●●●●●●● TABLET OR SMALLER ●●●●●●●●●●●●●●●●●●●● */
 
 
 @media only screen and (max-width: 1024px) {
