--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -31,7 +31,7 @@
   }
 
 
-/* ●●●●●●●●●●●●●●●●●●●  DESKTOP ●●●●●●●●●●●●●●●●● */
+/* ●●●●●●●●●●●●●●●●●●●●●  DESKTOP ●●●●●●●●●●●●●●●●●●●●●●● */
 
 @media only screen and (min-width: 1024px) {
 
